--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.gitignore
+.vscode/
+.prettierrc.yaml
+test.js
+src/Autocomplete/index.test.js
